// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SunCardFooter render should not render the azimuth field when it is not present in the config but data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the azimuth field when it is present in the config but no data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the dawn field when it is not present in the config but data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the dawn field when it is present in the config but no data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the dusk field when it is not present in the config but data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the dusk field when it is present in the config but no data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the elevation field when it is not present in the config but data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the elevation field when it is present in the config but no data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the noon field when it is not present in the config but data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should not render the noon field when it is present in the config but no data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should render the azimuth field when it is present in the config and data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$-->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$710305985$-->azimuth</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$710305985$-->0</span>
      </div>
    
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should render the dawn field when it is present in the config and data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$-->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$710305985$-->dawn</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$710305985$-->0</span>
      </div>
    
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should render the dusk field when it is present in the config and data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$-->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$710305985$-->dusk</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$710305985$-->0</span>
      </div>
    
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should render the elevation field when it is present in the config and data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$-->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$710305985$-->elevation</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$710305985$-->0</span>
      </div>
    
        </div>
      </div>
    "
`;

exports[`SunCardFooter render should render the noon field when it is present in the config and data for it is provided 1`] = `
"<!---->
      <div class=\\"sun-card-footer\\">
        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$-->
      <div class=\\"sun-card-text-container\\">
        <span class=\\"sun-card-field-name\\"><!--?lit$710305985$-->noon</span>
        <span class=\\"sun-card-field-value\\"><!--?lit$710305985$-->0</span>
      </div>
    
          <!--?lit$710305985$--><!--?-->
        </div>

        <div class=\\"sun-card-field-row\\">
          <!--?lit$710305985$--><!--?-->
          <!--?lit$710305985$--><!--?-->
        </div>
      </div>
    "
`;
